fix: cannot launch versionName with blank in it